# lib/routes/api/accounts.js
@@ -6,6 +6,7 @@ const Application = require('../../models/application');
 const Webhook = require('../../models/webhook');
 const ApiKey = require('../../models/api-key');
 const ServiceProvider = require('../../models/service-provider');
+const AccountLimits = require('../../models/account-limits');
 const {deleteDnsRecords} = require('../../utils/dns-utils');
 const {deleteCustomer} = require('../../utils/stripe-utils');
 const { v4: uuidv4 } = require('uuid');
@@ -483,6 +484,34 @@ async function validateCreateMessage(logger, sid, req) {
   }
 }
 
+function validateLimits(limits) {
+  if (!Array.isArray(limits)) {
+    throw new DbErrorBadRequest('\'limits\' must be an array when adding an account');
+  }
+
+  const validCategories = [
+    'api_rate',
+    'voice_call_session',
+    'device',
+    'voice_call_minutes',
+    'voice_call_session_license',
+    'voice_call_minutes_license'
+  ];
+
+  for (const limit of limits) {
+    if (!limit.category || !validCategories.includes(limit.category)) {
+      throw new DbErrorBadRequest(
+        `invalid limit category: '${limit.category}'. Must be one of: ${validCategories.join(', ')}`
+      );
+    }
+    if (typeof limit.quantity !== 'number' || limit.quantity < 0) {
+      throw new DbErrorBadRequest(
+        `invalid limit quantity for category '${limit.category}': must be a non-negative number`
+      );
+    }
+  }
+}
+
 async function validateAdd(req) {
   /* account-level token can not be used to add accounts */
   if (req.user.hasAccountAuth) {
@@ -503,6 +532,9 @@ async function validateAdd(req) {
   }
   if (req.body.queue_event_hook && typeof req.body.queue_event_hook !== 'object') {
     throw new DbErrorBadRequest('\'queue_event_hook\' must be an object when adding an account');
+  }
+  if (req.body.limits) {
+    validateLimits(req.body.limits);
   }
 }
 
@@ -531,6 +563,9 @@ async function validateUpdate(req, sid) {
     }
   }
   if (req.body.service_provider_sid) throw new DbErrorBadRequest('service_provider_sid may not be modified');
+  if (req.body.limits) {
+    validateLimits(req.body.limits);
+  }
 }
 
 async function validateDelete(req, sid) {
@@ -552,6 +587,9 @@ router.post('/', async(req, res) => {
     const secret = `wh_secret_${translator.generate()}`;
     await validateAdd(req);
 
+    // extract limits from request body if present
+    const limits = req.body.limits;
+
     // create webhooks if provided
     const obj = {...req.body, webhook_secret: secret};
     for (const prop of ['registration_hook', 'queue_event_hook']) {
@@ -561,8 +599,24 @@ router.post('/', async(req, res) => {
       delete obj[prop];
     }
 
+    // remove limits from obj before passing to Account.make
+    delete obj.limits;
+
     logger.debug(`Attempting to add account ${JSON.stringify(obj)}`);
     const uuid = await Account.make(obj);
+
+    // create account limits if provided
+    if (limits && limits.length > 0) {
+      logger.debug(`Creating ${limits.length} limit(s) for account ${uuid}`);
+      for (const limit of limits) {
+        await AccountLimits.make({
+          account_sid: uuid,
+          category: limit.category,
+          quantity: limit.quantity
+        });
+      }
+    }
+
     res.status(201).json({sid: uuid});
   } catch (err) {
     sysError(logger, res, err);
@@ -753,6 +807,9 @@ router.put('/:sid', async(req, res) => {
     const sid = parseAccountSid(req);
     await validateRequest(req, sid);
 
+    // extract limits from request body if present
+    const limits = req.body.limits;
+
     // create webhooks if provided
     const obj = Object.assign({}, req.body);
     for (const prop of ['registration_hook', 'queue_event_hook']) {
@@ -774,6 +831,9 @@ router.put('/:sid', async(req, res) => {
     }
 
     await validateUpdate(req, sid);
+
+    // remove limits from obj before passing to Account.update
+    delete obj.limits;
 
     if (Object.keys(obj).length) {
       let orphanedRegHook, orphanedQueueHook;
@@ -811,6 +871,32 @@ router.put('/:sid', async(req, res) => {
       }
       if (orphanedQueueHook) {
         await Webhook.remove(orphanedQueueHook);
+      }
+    }
+
+    // update account limits if provided
+    if (limits && limits.length > 0) {
+      logger.debug(`Updating ${limits.length} limit(s) for account ${sid}`);
+
+      // Retrieve existing limits
+      const existingLimits = await AccountLimits.retrieve(sid) || [];
+
+      for (const limit of limits) {
+        const existing = existingLimits.find((el) => el.category === limit.category);
+        if (existing) {
+          // Update existing limit
+          await AccountLimits.update(existing.account_limits_sid, {
+            category: limit.category,
+            quantity: limit.quantity
+          });
+        } else {
+          // Create new limit
+          await AccountLimits.make({
+            account_sid: sid,
+            category: limit.category,
+            quantity: limit.quantity
+          });
+        }
       }
     }
 
